--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,11 @@ vignettes/*.pdf
 
 # OAuth2 token, see https://github.com/hadley/httr/releases/tag/v0.3
 .httr-oauth
+
+# report stuff
+report.html
+report.txt
+reportSummary.txt
+
+# vim swap files
+*.swp
